# fb-downloader-app

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: windows-build.yml
.github/workflows/: windows-build.yml
src/: settings.js
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/extension/: background.js  manifest.json
src-tauri/src/: main.rs
